--- a/styles.css
+++ b/styles.css
@@ -80,13 +80,13 @@ body {
 }
 
 .order-description p {
-  margin: 0 50px 0 50px;
+  margin: 0 50px;
 }
 .button-container {
   display: flex;
   border-radius: 25px;
   cursor: pointer;
-  margin: 10px 20px 10px 20px;
+  margin: 10px 20px;
 }
 .primary {
   box-shadow: 0px 8px 10px -6px var(--primary-bright);
@@ -95,6 +95,12 @@ body {
   border-radius: 15px;
   color: var(--neutral-very-pale) !important;
   background: var(--primary-bright);
+}
+.primary > a:hover {
+  opacity: 0.9;
+}
+.secondary > a:hover {
+  color: var(--neutral-dark);
 }
 .button-container a {
   color: var(--neutral-desaturated);
