--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ h2 {
 a,
 p {
   font-weight: 500;
-  margin-block-start: 0px;
-  margin-block-end: 0px;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 body {
@@ -42,7 +42,7 @@ body {
   width: 450px;
   min-width: 350px;
   padding-bottom: 10px;
-  box-shadow: 0px 15px 30px -25px var(--primary-bright);
+  box-shadow: 0 15px 30px -25px var(--primary-bright);
 }
 
 .order-content {
@@ -89,7 +89,7 @@ body {
   margin: 10px 20px;
 }
 .primary {
-  box-shadow: 0px 8px 10px -6px var(--primary-bright);
+  box-shadow: 0 8px 10px -6px var(--primary-bright);
 }
 .primary > a {
   border-radius: 15px;
